# xpektra

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: build_docs.yml  mirror-to-gitlab.yml  release.yml  run_tests.yml
_static/: custom_css.css
api/projection_operators/: index.html
api/scheme_api/: index.html
api/spectral_operator_api/: index.html
api/spectral_space_api/: index.html
assets/xpektra_fft/: index.html
basics/: index.html
benchmarking/: benchmark_linear_elasticity.py  benchmark_new_approach.py  benchmark_projection_operator.py  run_cpu.sh  run_gpu.sh  script.py
docs/: basics.md  extensibility.md  getting_started.md  index.md  theory.md
docs/_hooks/: notebook_tags.py  tag_notebook_colab.py
docs/_static/: custom_css.css
docs/api/: projection_operators.md  scheme_api.md  spectral_operator_api.md  spectral_space_api.md
docs/assets/: xpektra_fft.ipynb
docs/examples/: complex_microstructure.py  computational_homogenization.ipynb  computational_homogenization.py  differential_operator.ipynb  differential_operator.py  displacement_based_fft.ipynb  displacement_based_fft.py  elasticity_2D.ipynb  elasticity_3D.ipynb  gent.ipynb  j2_plasticity.ipynb  j2_plasticity.py  linear_elasticity.ipynb  linear_elasticity.py  linear_elasticity_2.ipynb  linear_elasticity_autovmap.py  linear_elasticity_rectangle.ipynb  linear_elasticity_rectangle.py  linear_elasticity_soldis.py  mixed_energy.py  moulinec_suquet.ipynb  moulinec_suquet.py  moulinec_suquet_newton_krylov.ipynb  moulinec_suquet_newton_krylov.py  multiphase_material.ipynb  multiphase_material.py  multiscale.ipynb  multiscale.py  phasefield_fracture_2D.ipynb  phasefield_fracture_2D.py  phasefield_localization_1D.ipynb  st_venant_kirchhoff.ipynb  st_venant_kirchhoff.py  st_venant_kirchoff_material.py  test.ipynb  topology_optimization.ipynb  topology_optimization.py
docs/javascripts/: carousel.js  mathjax.js
docs/stylesheets/: carousel.css  extra.css
examples/: complex_microstructure.py  computational_homogenization.py  displacement_based_fft.py  elasticity_2D.ipynb  elasticity_3D.ipynb  gent.py  j2_plasticity.ipynb  j2_plasticity.py  linear_elasticity.ipynb  linear_elasticity.py  linear_elasticity_rectangle.py  mixed_energy.py  moulinec_suquet.py  moulinec_suquet_newton_krylov.py  multiphase_material.ipynb  multiphase_material.py  multiscale.py  phasefield_localization_1D.py  st_venant_kirchhoff.py  test_implicit_differentiation.py
examples/computational_homogenization/: index.html
examples/differential_operator/: index.html
examples/displacement_based_fft/: index.html
examples/gent/: index.html
examples/j2_plasticity/: index.html
examples/linear_elasticity/: index.html
examples/linear_elasticity_rectangle/: index.html
examples/moulinec_suquet/: index.html
examples/moulinec_suquet_newton_krylov/: index.html
examples/multiphase_material/: index.html
examples/multiscale/: index.html
examples/phasefield_fracture_2D/: index.html
examples/phasefield_localization_1D/: index.html
examples/st_venant_kirchhoff/: index.html
examples/topology_optimization/: index.html
extensibility/: index.html
paper/: paper.md
search/: search_index.json
spectralsolver/: __init__.py  operator.py  projection_operator.py  scheme.py  space.py  transform.py  utils.py
spectralsolver/green_functions/: displacement_based_operators.py  fourier_galerkin.py  spatial.py  tensor.py
spectralsolver/operators/: fourier_galerkin.py
spectralsolver/plotting/: colors.py  latex_sans_serif.mplstyle
spectralsolver/solvers/: linear.py  nonlinear.py  petsc_solvers.py
spectralsolvers/: utils.py
spectralsolvers/fft/: transform.py
spectralsolvers/operators/: displacement_based_operators.py  fourier_galerkin.py  fourier_galerkin_operators.py  operators.py  spatial.py  tensor.py  tensor_operators.py
spectralsolvers/plotting/: color_scheme.py
spectralsolvers/solvers/: custom_solvers.py  linear.py  nonlinear.py
tests/: test_make_field.py  test_projection_operator.py  test_schemes.py  test_spectral_operator.py  test_tensor_operator.py
theory/: index.html
xpektra/: __init__.py  operator.py  projection_operator.py  scheme.py  space.py  spectral_operator.py  tensor_operator.py  transform.py  utils.py
xpektra/green_functions/: displacement_based_operators.py  fourier_galerkin.py  spatial.py  tensor.py
xpektra/plotting/: __init__.py  colors.py
xpektra/solvers/: nonlinear.py
