[project]
name = "xpektra"
version = "0.3.0"
description = "Functional programming and differentiable framework for spectral methods"
authors = [
    { name = "Mohit Pundir", email = "mpundir@ethz.ch" },
]
license = "LGPL-3.0"
license-files = ["COPYING", "COPYING.LESSER"]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax==0.8.0",
    "equinox<=0.13.0",
    "numpy",
    "scipy",
    "jax-autovmap>=0.3.0",
]

[project.optional-dependencies]
examples = [
    "ipykernel>=6.30.0",
    "scikit-image>=0.25.2",
    "matplotlib",
]
dev = [
    "commitizen>=4.9.1",
    "pytest>=8.4.2",
]
docs = [
    "jupytext>=1.18.1",
    "mkdocs>=1.6.1",
    "mkdocs-include-exclude-files>=0.1.0",
    "mkdocs-ipynb>=0.1.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings-python>=1.18.2",
]


[build-system]
requires = [ "hatchling", ]
build-backend = "hatchling.build"

[project.urls]
repository = "https://gitlab.ethz.ch/compmechmat/research/mohit-pundir/spectralsolver"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
template = ".changelog.tpl"

[tool.eenv]
stack = "2025-06"
modules = [
    "gcc/12.2.0",
    "python/3.13.0",
]

[tool.uv]
constraint-dependencies = []