[project]
name = "xpektra"
version = "0.3.3"
description = "Functional programming and differentiable framework for spectral methods"
authors = [
    { name = "Mohit Pundir", email = "mpundir@ethz.ch" },
]
license = "LGPL-3.0"
license-files = ["COPYING", "COPYING.LESSER"]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.8.0",
    "equinox >=0.13.0",
    "numpy",
    "scipy",
    "mkdocs-section-index>=0.3.11",
]

[project.optional-dependencies]
examples = [
    "ipykernel>=6.30.0",
    "scikit-image>=0.25.2",
    "matplotlib",
    "optax>=0.2.6",
    "jaxopt>=0.8.5",
    "tatva",
    "optimistix>=0.0.11",
    "cmap>=0.6.2",
]
dev = [
    "pytest>=8.4.2",
]
docs = [
    "jupytext>=1.18.1",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-include-exclude-files>=0.1.0",
    "mkdocs-ipynb>=0.1.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings-python>=1.18.2",
]


[build-system]
requires = [ "hatchling", ]
build-backend = "hatchling.build"

[project.urls]
repository = "https://github.com/smec-ethz/xpektra"
